--- a/apps/client/src/components/PDFViewer/style/Toolbar.css
+++ b/apps/client/src/components/PDFViewer/style/Toolbar.css
@@ -1,3 +1,5 @@
+@import 'tailwindcss';
+
 .Toolbar {
   display: flex;
   justify-content: space-between;
@@ -40,7 +42,6 @@
   border: none;
   /* Remove border */
   cursor: pointer;
-  padding: 2px;
   margin-right: 8px;
   transition:
     color 0.3s,
@@ -61,4 +62,8 @@
 .hide-spinner::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+.toolbar-button {
+  @apply gap-1 !p-1.5 h-fit rounded-xs hover:bg-neutral-500 hover:text-neutral-200 hover:cursor-pointer;
 }
